Don't use a static class loader since that keeps all generated classes alive.